Corrections du code : accessibilité, css, contrastes

--- a/public/css/_mixins.scss
+++ b/public/css/_mixins.scss
@@ -11,7 +11,7 @@
 }
 
 @mixin title3 {
-    font-family: 'Over the Rainbow', cursive;
+    font-family: 'Anton', sans-serif;
     font-size: 30px;
     text-align: center;
 }
