--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -123,8 +123,9 @@ a:hover {
 /********** PARTIALS **********/
 /***** MAIN NAVBAR *****/
 .navbar {
-    font-size: 30px;
-    color: $light;
+    font-size: 35px;
+    font-weight: bold;
+    color: white;
 
     a {
         margin: 0 10px;
@@ -522,9 +523,11 @@ footer {
     background-repeat: no-repeat;
     background-attachment: fixed;
 
-    h1 {
+    .contactIndex {
         font-size: 60px;
         color: $light;
+        font-family: 'Anton', sans-serif;
+        text-align: center;
     }
 
     .buttonIndex {
